--- a/public/app.css
+++ b/public/app.css
@@ -5,5 +5,9 @@ pre.info {float:left;}
 .boolean { color: blue; }
 .null { color: magenta; }
 .key { color: red; }
-a {text-decoration: none;}
-a.active {text-decoration: underline; color: red}
+/*a {text-decoration: none;}*/
+/*a.active {text-decoration: underline; color: red}*/
+/*.fa {vertical-align: bottom}*/
+.row {margin-bottom: 20px;}
+.container-fluid {margin-top:20px;}
+/*h2 a.btn {margin:0 10px;}*/
